--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,8 +3,18 @@ name: Publish SSCEP
 on: [push, pull_request]
 
 jobs:
+  init:
+    name: Initialization
+    runs-on: ubuntu-latest
+    steps:
+    - name: Container registry configuration
+      run: |
+        echo "REGISTRY: ${{ vars.REGISTRY }}"
+        echo "REGISTRY_NAMESPACE: ${{ vars.REGISTRY_NAMESPACE }}"
+
   build:
     name: Building SSCEP
+    needs: init
     runs-on: ubuntu-latest
     steps:
     - name: Clone repository
@@ -36,16 +46,25 @@ jobs:
 
   publish:
     name: Publishing SSCEP
-    if: github.event_name == 'push' && github.ref_name == 'v0.10.0-pki'
-    needs: build
+    if: github.event_name == 'push' && github.ref_name == 'v0.10.0-pki' && vars.REGISTRY != ''
+    needs: [init, build]
     runs-on: ubuntu-latest
     steps:
-    - name: Log in to the Container registry
+    - name: Log in to GitHub Container Registry
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
+      if: vars.REGISTRY == 'ghcr.io'
+
+    - name: Log in to other container registry
+      uses: docker/login-action@v2
+      with:
+        registry: ${{ vars.REGISTRY }}
+        username: ${{ secrets.REGISTRY_USERNAME }}
+        password: ${{ secrets.REGISTRY_PASSWORD }}
+      if: vars.REGISTRY != 'ghcr.io'
 
     - name: Retrieve sscep-dist image
       uses: actions/cache@v3
@@ -56,5 +75,5 @@ jobs:
     - name: Publish sscep-dist image
       run: |
         docker load --input sscep-dist.tar
-        docker tag sscep-dist ghcr.io/${{ github.repository_owner }}/sscep-dist:latest
-        docker push ghcr.io/${{ github.repository_owner }}/sscep-dist:latest
+        docker tag sscep-dist ${{ vars.REGISTRY }}/${{ vars.REGISTRY_NAMESPACE }}/sscep-dist:latest
+        docker push ${{ vars.REGISTRY }}/${{ vars.REGISTRY_NAMESPACE }}/sscep-dist:latest
